[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
clap = { version = "4.4.8", features = ["derive"] }
gif = "0.12.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
